all projects till 28 july

--- a/StacksViews/StacksViews/Base.lproj/Main.storyboard
+++ b/StacksViews/StacksViews/Base.lproj/Main.storyboard
@@ -16,35 +16,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="TTr-hZ-6TF">
-                                <rect key="frame" x="10" y="312" width="394" height="31"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TTr-hZ-6TF">
+                                <rect key="frame" x="10" y="312" width="394" height="60"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="si5-My-SPw">
-                                        <rect key="frame" x="0.0" y="0.0" width="98.5" height="31"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="98.5" height="60"/>
                                         <color key="backgroundColor" systemColor="systemRedColor"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8nJ-bD-eJe">
-                                        <rect key="frame" x="98.5" y="0.0" width="98.5" height="31"/>
+                                        <rect key="frame" x="98.5" y="0.0" width="98.5" height="60"/>
                                         <color key="backgroundColor" red="0.69857859609999995" green="0.46387082340000002" blue="0.34895640610000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9re-kI-GNb">
-                                        <rect key="frame" x="197" y="0.0" width="98.5" height="31"/>
+                                        <rect key="frame" x="197" y="0.0" width="98.5" height="60"/>
                                         <color key="backgroundColor" red="0.086274509799999996" green="0.086274509799999996" blue="0.89019607840000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A8i-Kn-yiw">
-                                        <rect key="frame" x="295.5" y="0.0" width="98.5" height="31"/>
+                                        <rect key="frame" x="295.5" y="0.0" width="98.5" height="60"/>
                                         <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                         <color key="tintColor" red="0.33022504050000001" green="0.27450980390000002" blue="0.27450980390000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                     </button>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="BU8-50-Aub"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
